# rust_ray

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  generate_flamegraph.bat  imgui.ini  imgui_settings.ini
benches/: test_benches.rs
src/: build.rs  build_config.rs  config.rs  main.rs  program.rs  rustfmt.toml  thread_data.rs
src/boilerplate/: error_handling.rs  logging.rs  mod.rs  ui_system.rs
src/config/: keybindings_config.rs  mod.rs  program_config.rs  resources_config.rs  tracing_config.rs  ui_config.rs
src/config/compile_time/: config_config.rs  mod.rs  resources_config.rs  ui_config.rs
src/config/init_time/: mod.rs  ui_config.rs
src/config/run_time/: keybindings_config.rs  mod.rs  resources_config.rs  tracing_config.rs  ui_config.rs
src/config/run_time/ui_config/: frame_info_config.rs  mod.rs  theme.rs  theme_ext.rs
src/core/: clipboard_integration.rs  error_handling.rs  logging.rs  mod.rs  program.rs  ui_system.rs
src/core/ui/: mod.rs
src/core/ui_system/: font_manager.rs
src/core/ui_system/fonts/: mod.rs
src/engine/: engine_data.rs  mod.rs
src/helper/: event_targets.rs  file_helper.rs  logging.rs  mod.rs  no_panic_pill.rs  panic_pill.rs
src/helper/logging/: event_targets.rs  mod.rs  span_time_elapsed_field.rs
src/old/engine/: mod.rs
src/old/program/: mod.rs
src/old/program/ui_system/: docking.rs  font_manager.rs  mod.rs
src/program/: mod.rs  program_data.rs  program_messages.rs  thread_messages.rs
src/program/ui_system/: clipboard_integration.rs  docking.rs  font_manager.rs  mod.rs
src/resources/: resource_manager.rs
src/resources/app_resources/fonts/Consolas/: info.txt
src/resources/app_resources/fonts/Metropolis/: info.txt
src/resources/app_resources/fonts/fira code/: info.txt
src/resources/app_resources/fonts/fira code/v6.2/: specimen.html
src/resources/app_resources/fonts/jetbrains mono/: info.txt
src/resources/app_resources/fonts/roboto/: info.txt
src/resources/app_resources/fonts/source code pro/: info.txt
src/resources/app_resources/fonts/source code pro/v2.038R-ro-1.058R-it/: LICENSE.md
src/ui/: clipboard_integration.rs  docking.rs  font_manager.rs  mod.rs  popup_manager.rs  ui_data.rs  ui_system.rs
src/ui/build_ui_impl/: config_ui_impl.rs  font_manager_ui_impl.rs  frame_info_ui_impl.rs  mod.rs  shared.rs  ui_manager_ui_impl.rs
src/ui/build_ui_impl/shared/: constants.rs  error_display.rs  input.rs  menu_utils.rs  mod.rs  tree_utils.rs  window_utils.rs
src/ui/build_ui_impl/ui_management/: font_manager_ui_impl.rs  frame_info_ui_impl.rs  mod.rs  ui_manager_ui_impl.rs
