[package]
name = "rust_ray"
version = "0.1.0"
edition = "2021"
authors = ["ararem <48875125+Ararem@users.noreply.github.com>"]
# description = ""
readme = "README.md"
license = "MIT OR Apache-2.0"  # https://spdx.org/licenses/
build = "build.rs" #file to run on build


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Helper/Dev-tool dependencies
shadow-rs = "0.17.1"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "fmt", "std"] }
tracing-error = "0.2.0"
pretty_assertions = "1.3.0"
indoc = "1.0.7"
structx = "0.1"
regex = "1.7"
lazy_static = "1.4"
chrono = "0.4"
fs_extra = "1.2.0"
path-clean = "0.1.0"

# ImGUI dependencies
clipboard = "0.5"
glium = { version = "0.30", default-features = true } # DO NOT CHANGE TO >0.30 OR IT WILL BREAK (different winit versions)
imgui = {version = "0.8", features = ["tables-api"]}
imgui-glium-renderer = "0.8"
imgui-winit-support = "0.8"

[build-dependencies]
shadow-rs = "0.17.1" # Needs to run at build-time, so include as build dependency
fs_extra = "1.2.0"
glob = "0.3"

[package.metadata.inwelling]
structx = true