[package]
name = "rust_ray"
version = "0.1.0"
edition = "2021"
authors = ["ararem <48875125+Ararem@users.noreply.github.com>"]
# description = ""
readme = "README.md"
license = "MIT OR Apache-2.0"  # https://spdx.org/licenses/
build = "build.rs" #file to run on build


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Helper/Dev-tool dependencies
shadow-rs = "0.17.1"
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "fmt", "std"] }
tracing-error = "0.2.0"
pretty_assertions = "1.3.0"
indoc = "1.0.7"
structx = "0.1"
regex = "1.7"
lazy_static = "1.4"
chrono = "0.4"
fs_extra = "1.2.0"
path-clean = "0.1.0"

# ImGUI dependencies
clipboard = "0.5"
glium = { version = "0.32.1", default-features = true }
imgui = { version = "0.9.0", features=["docking"] }
imgui-glium-renderer = "0.9.0"
imgui-winit-support = "0.9.0"
#imgui-sys = {version = "0.9.0", features = ["docking"]}

[build-dependencies]
shadow-rs = "0.17.1" # Needs to run at build-time, so include as build dependency
fs_extra = "1.2.0"
glob = "0.3"

[profile.dev]
# No optimisation. Sloewr code but means nothing has been changed so we won't have issues debugging
opt-level = 0
# Checks our maths is good
overflow-checks = true
lto = false
# Fast compile time, not very optimised
codegen-units = 32
incremental = true
# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true

[profile.release]
# Full optimisation
opt-level = 3
overflow-checks = false
# Enable link-time optimization, eliminates more code and inlines across crate boundaries.
# Default: false
lto = true
# Much slower compile time, but speeds up generated code (best optimisations)
codegen-units = 1
incremental = true
# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true